# HF-BNO08x-ESPIDF

./: .gitmodules  CMakeLists.txt  Kconfig  README.md  idf_component.yml  sdkconfig.defaults
components/bno08x/: CMakeLists.txt  README.md  esp_i2c_transport.cpp
include/: bno08x_i2c_transport.hpp
scripts/: create_release.sh
src/: esp_i2c_transport.cpp
